--- a/style.css
+++ b/style.css
@@ -11,9 +11,20 @@ header {
   border-bottom: 1px solid #ccc;
 }
 
-header nav { 
+header nav {
   float: right;
 }
+
+nav a:hover{
+  text-decoration: underline;
+  color: #0056b3
+}
+
+#header a:hover{
+  text-decoration: underline;
+}
+
+
 
 nav ul {
   margin: 40px 0 0 0;
