automatically backed up by learn

--- a/style.css
+++ b/style.css
@@ -25,9 +25,13 @@ nav a:hover{
 }
 
 div.questions{
-  font-size: 30px;
     padding: 0 20px 0 20px
   }
+
+div.questions h4{
+  font-size: 30px;
+  margin-bottom: 10px;
+}
 
 
 nav ul {
