--- a/style.css
+++ b/style.css
@@ -47,6 +47,11 @@ div.btn a{
   font-size: 20px;
 }
 
+div.questions a.btn:hover{
+  background-color: #0069d9;
+  border-color: #0069d9;
+}
+
 
 nav ul {
   margin: 40px 0 0 0;
