--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ div.btn a{
   font-size: 20px;
 }
 
-div.questions a.btn:hover {
+div.btn:hover {
   background-color: #0069d9;
   border-color: #0069d9;
 }
