--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ div.questions p{
   margin-top: 30px;
 }
 
-div.questions a{
+div.questions a.btn{
   border-radius: 5px;
   color: #FFF;
   background-color: #007bff;
